--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 .App {
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   text-align: center;
+  height: 100vh;
+  background-image: url('./images/fondo-navidad.webp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: grid;
+  place-content: center;
 }
 
 * {
@@ -8,3 +15,26 @@
   padding: 0;
   margin: 0;
 }
+
+.gifts {
+  background-color: #fff;
+  padding: 20px 50px;
+}
+
+.gifts h1 {
+  font-family: 'Mountains of Christmas', cursive;
+}
+
+.gifts ul {
+  margin-top: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  list-style: circle;
+}
+
+.gifts li::marker {
+  color: red;
+}
+
+
