--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,74 @@
-.App {
-  font-family: sans-serif;
+.gifts {
+  font-family: 'Lato', sans-serif;
   text-align: center;
+  background-color: #fff;
+  padding: 20px 60px;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.App {
+  background-image: url('./images/fondo-navidad.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  place-content: center;
+  height: 100vh;
+}
+
+.App h1 {
+  font-family: 'Mountains of Christmas', cursive;
+}
+
+.App ul {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+}
+
+.App li::marker {
+  color: red;
+}
+
+.App form {
+  margin-top: 12px;
+}
+
+.App input {
+  padding: 5px 10px;
+  border: 2px solid gray;
+  border-radius: 5px;
+  outline: none;
+}
+
+.App input:focus {
+  border: 2px solid red;
+}
+
+.App button {
+  padding: 5px 10px;
+  margin-left: 10px;
+  background-color: red;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
+  color: white;
+  border: 2px solid red;
+  border-radius: 5px;
+  transition: all 0.2s;
+}
+
+.App button:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.App button:active {
+  transform: scale(1);
 }
