--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,85 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+
+.App {
+  font-family: "Lato", sans-serif;
+  height: 100vh;
+  background-image: url("./images/fondo-navidad.webp");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: grid;
+  place-content: center;
+}
+
+.container {
+  background-color: #fff;
+  padding: 20px 40px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+h1 {
+  font-family: "Mountains of Christmas", cursive;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+input {
+  outline: none;
+  border: 1.5px solid gray;
+  border-radius: 4px;
+  padding: 4.5px 4px;
+}
+
+input.amount {
+  width: 34px;
+}
+
+input:focus {
+  border: 1.5px solid crimson;
+}
+
+button {
+  background-color: crimson;
+  border: none;
+  border-radius: 4px;
+  color: #ffF;
+  letter-spacing: 1px;
+  padding: 6px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: red;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+p {
+  color: gray;
+}
+
+
+
+
