--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,55 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.App {
+  font-family: "Lato", sans-serif;
+  height: 100vh;
+  background-image: url("./images/fondo-navidad.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: grid;
+  place-content: center;
+  position: relative;
+}
+
+.container {
+  background-color: #fff;
+  padding: 20px 40px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  min-width: 300px;
+}
+
+h1 {
+  font-family: "Mountains of Christmas", cursive;
+}
+
+button {
+  font-size: 14px;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.btnPrimary {
+  background-color: crimson;
+  color: #fff;
+}
+.btnPrimary:hover {
+  background-color: red;
+}
+
+.btnSecondary:hover {
+  filter: brightness(0.98);
 }
