--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,49 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+
+.App {
+  height: 100vh;
+  font-family: "Lato", sans-serif;
+  background-image: url("./images/fondo-navidad.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: grid;
+  place-content: center;
+}
+
+.container {
+  min-width: 300px;
+  background-color: #fff;
+  padding: 20px 40px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+button {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  letter-spacing: 1px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(210, 210, 210);
+}
+
+.btnPrimary {
+  background-color: crimson;
+  color: #fff;
+}
+
+.btnPrimary:hover {
+  background-color: #ff0000;
+}
+
+
