--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,25 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.App {
+  font-family: "Lato", sans-serif;
+  height: 100vh;
+  background-image: url("./images/fondo-navidad.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: grid;
+  place-content: center;
+}
+
+.container {
+  background-color: #fff;
+  padding: 20px 40px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
 }
