--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -2,13 +2,14 @@
   background-color: #fff;
   position: fixed;
   top: 50%;
-  left: 20%;
+  left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   gap: 12px;
   padding: 20px 40px;
   border-radius: 4px;
+  z-index: 2;
 }
 
 .form input {
@@ -18,3 +19,12 @@
   padding: 4px;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
