--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,42 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+body {
+  background-image: url("./images/fondo-navidad.webp");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+}
+
+.app {
+  background-color: #fff;
+  padding: 20px 40px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+button {
+  padding: 6px 12px;
+  border: none;
+  border-radius: 4px;
+  letter-spacing: 1px;
+}
+button:hover {
+  cursor: pointer;
+  background-color: rgb(223, 223, 223);
+}
+.btn-primary {
+  background-color: crimson;
+  color: #fff;
+}
+.btn-primary:hover {
+  background-color: red;
 }
