--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,3 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
